<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forward_position_controller_moveit_plugin</name>
  <version>100.0.2</version>
  <description>forward_position_controller MoveIt Plugin</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
